<resources>
    <string name="app_name">Taskee</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_all_tasks">All Tasks</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_settings">Settings</string>

    <string name="ellipses">&#8230;</string>

    <string name="edit_task_title_error">Please enter a title &#8230;</string>
    <string name="edit_task_date_error">Please set a due date &#8230;</string>
    <string name="edit_task_future_error">Please selected a date in the future</string>
    <string name="edit_task_save_error">There was a problem saving this task</string>

    <string name="lato_black">fonts/Lato-Black.ttf</string>
    <string name="lato_black_italic">fonts/Lato-BlackItalic.ttf</string>
    <string name="lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="lato_bold_italic">fonts/Lato-BoldItalic.ttf</string>
    <string name="lato_hairline">fonts/Lato-Hairline.ttf</string>
    <string name="lato_hairline_italic">fonts/Lato-HairlineItalic.ttf</string>
    <string name="lato_italic">fonts/Lato-Italic.ttf</string>
    <string name="lato_light">fonts/Lato-Light.ttf</string>
    <string name="lato_light_italic">fonts/Lato-LightItalic.ttf</string>
    <string name="lato_regular">fonts/Lato-Regular.ttf</string>

    <string name="ff_clan_ot_black">fonts/FF Clan OT Black.otf</string>
    <string name="ff_clan_ot_bold">fonts/FF Clan OT Bold.otf</string>
    <string name="ff_clan_ot_book">fonts/FF Clan OT Book.otf</string>
    <string name="ff_clan_ot_medium">fonts/FF Clan OT Medium.otf</string>
    <string name="ff_clan_ot_narrow_black">fonts/FF Clan OT Narrow Black.otf</string>
    <string name="ff_clan_ot_narrow_bold">fonts/FF Clan OT Narrow Bold.otf</string>
    <string name="ff_clan_ot_narrow_book">fonts/FF Clan OT Narrow Book.otf</string>
    <string name="ff_clan_ot_narrow_medium">fonts/FF Clan OT Narrow Medium.otf</string>
    <string name="ff_clan_ot_narrow_news">fonts/FF Clan OT Narrow News.otf</string>
    <string name="ff_clan_ot_narrow_thin">fonts/FF Clan OT Narrow Thin.otf</string>
    <string name="ff_clan_ot_narrow_ultra">fonts/FF Clan OT Narrow Ultra.otf</string>
    <string name="ff_clan_ot_news">fonts/FF Clan OT News.otf</string>
    <string name="ff_clan_ot_thin">fonts/FF Clan OT Thin.otf</string>
    <string name="ff_clan_ot_ultra">fonts/FF Clan OT Ultra.otf</string>

    <string name="dialog_remove_item">Are you sure you want to remove this item</string>
    <string name="dialog_positive">YES</string>
    <string name="dialog_negative">NO</string>

    <string name="line_select_date">Select Date</string>
    <string name="line_add_sub_task">Add Sub Task</string>
    <string name="line_delete_task">Are you sure you want to delete this task?</string>
    <string name="line_all_tasks">All Tasks</string>
    <string name="line_new_task">New Task</string>
    <string name="line_edit_task">Edit Task</string>
    <string name="line_no_tasks">No Tasks to Show</string>
    <string name="line_task_color">No Tasks to Show</string>
    <string name="line_add_note">Add a Note</string>

    <string name="word_choose">Choose</string>
    <string name="word_date">Date</string>
    <string name="word_time">Time</string>
    <string name="word_title">Title</string>
    <string name="word_note">Note</string>
    <string name="word_yes">Yes</string>
    <string name="word_no">No</string>
    <string name="word_save">Save</string>
    <string name="word_on">On</string>

    <string name="placeholder_date">Jan 1, 2017 &#8211; 12:00AM</string>
    <string name="placeholder_title">This is a title for a task</string>
    <string name="placeholder_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string-array name="spinner">
        <item>Priority</item>
        <item>Due Date</item>
        <item>Latest</item>
    </string-array>

    <string name="shortcut_short_label">Create New Note</string>
    <string name="shortcut_long_label">Create New Note</string>
    <string name="shortcut_disabled_label">Create New Note</string>

    <string name="menu_complete">Complete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_trash">Trash</string>

</resources>
