<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:background="@drawable/item_background"
    android:orientation="horizontal">

    <android.support.v7.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="@dimen/item_margin"
        android:id="@+id/set_task_complete"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingBottom="@dimen/item_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginTop="@dimen/item_margin">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/placeholder_title"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                fontPath="@string/ff_clan_ot_narrow_news"/>

            <TextView
                android:id="@+id/task_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/placeholder_date"
                android:textColor="@color/textColorSecondary"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/task_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_margin"
            android:layout_marginStart="@dimen/item_margin"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/placeholder_lorem"
            android:textColor="@color/textColorSecondary"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>