<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar">

        <include layout="@layout/partial_toolbar_title" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/view_task_date_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_task_title"
            android:layout_marginTop="@dimen/quick_add_view_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/view_task_date_on"
                    fontPath="@string/lato_light"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:text="@string/word_on"
                    android:textColor="@color/textColorSecondary" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/view_task_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:text="@string/placeholder_date"
                    android:textColor="@color/selected_date_color" />

            </LinearLayout>

            <com.mikepenz.iconics.view.IconicsImageView
                android:id="@+id/view_task_remove_alarm"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                app:iiv_color="@color/white"
                app:iiv_icon="gmi-close"
                app:iiv_size="15dp" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/view_task_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/view_task_date_wrapper"
            android:layout_marginTop="@dimen/quick_add_view_margin"
            android:background="@null"
            android:gravity="top|start"
            android:hint="@string/line_add_note"
            android:inputType="textCapSentences|textMultiLine"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/view_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:ems="10"
            android:hint="@string/word_title"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="2"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorSecondary"
            android:textSize="35sp" />

    </RelativeLayout>

</LinearLayout>