<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_task_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal">

            <include layout="@layout/partial_toolbar_title" />

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical">

                <com.ihunter.taskee.ui.CustomEditText
                    android:id="@+id/create_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="Title"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_gray"
                    android:textSize="20sp"
                    app:fontName="@string/lato_regular" />

                <com.ihunter.taskee.ui.CustomEditText
                    android:id="@+id/create_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="Description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:lines="3"
                    android:padding="20dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_gray"
                    android:textSize="14sp"
                    app:fontName="@string/lato_regular" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_task_spacing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/create_task_select_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp">

                    <com.ihunter.taskee.ui.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="25dp"
                        android:text="START DATE"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        app:fontName="@string/lato_regular" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:paddingLeft="25dp">

                        <com.ihunter.taskee.ui.CustomTextView
                            android:id="@+id/create_task_date_day"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp"
                            android:visibility="gone"
                            app:fontName="@string/lato_regular" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.ihunter.taskee.ui.CustomTextView
                                android:id="@+id/create_task_date_top"
                                style="@style/CreateTaskChooserTextView"
                                android:gravity="bottom"
                                android:text="@string/word_choose" />

                            <com.ihunter.taskee.ui.CustomTextView
                                android:id="@+id/create_task_date_bottom"
                                style="@style/CreateTaskChooserTextView"
                                android:gravity="top"
                                android:text="@string/word_date" />

                            <com.ihunter.taskee.ui.CustomTextView
                                android:id="@+id/create_task_date_year"
                                style="@style/CreateTaskChooserTextView"
                                android:textColor="@color/colorAccent"
                                android:visibility="gone" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/create_task_select_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:orientation="vertical"
                    android:paddingBottom="30dp"
                    android:paddingTop="30dp">

                    <com.ihunter.taskee.ui.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingRight="25dp"
                        android:text="START TIME"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        app:fontName="@string/lato_regular" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <com.ihunter.taskee.ui.CustomTextView
                            android:id="@+id/create_task_time"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginRight="5dp"
                            android:gravity="center_vertical"
                            android:text=""
                            android:textColor="@color/colorAccent"
                            android:textSize="30sp"
                            android:visibility="gone"
                            app:fontName="@string/lato_regular" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.ihunter.taskee.ui.CustomTextView
                                android:id="@+id/create_task_time_top"
                                style="@style/CreateTaskChooserTextView"
                                android:gravity="bottom"
                                android:text="@string/word_choose" />

                            <com.ihunter.taskee.ui.CustomTextView
                                android:id="@+id/create_task_time_bottom"
                                style="@style/CreateTaskChooserTextView"
                                android:gravity="top"
                                android:text="@string/word_time" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_task_spacing"
                android:background="#10ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical">

                <com.ihunter.taskee.ui.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:text="PRIORITY"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    app:fontName="@string/lato_regular" />

                <RadioGroup
                    android:id="@+id/create_task_priority_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <com.ihunter.taskee.ui.CustomRadioButton
                        android:id="@+id/create_task_low_priority"
                        style="@style/CreateTaskUrgencyRadioButtons"
                        android:text="LOW"
                        app:checked_color="@color/low_priority" />

                    <com.ihunter.taskee.ui.CustomRadioButton
                        android:id="@+id/create_task_medium_priority"
                        style="@style/CreateTaskUrgencyRadioButtons"
                        android:text="MEDIUM"
                        app:checked_color="@color/medium_priority" />

                    <com.ihunter.taskee.ui.CustomRadioButton
                        android:id="@+id/create_task_high_priority"
                        style="@style/CreateTaskUrgencyRadioButtons"
                        android:text="HIGH"
                        app:checked_color="@color/high_priority" />

                </RadioGroup>

            </LinearLayout>

            <!--<android.support.v4.widget.Space-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="@dimen/create_task_spacing" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/create_task_sub_task_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>

                    <com.ihunter.taskee.ui.AddSubTaskView
                        android:id="@+id/add_sub_task_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></com.ihunter.taskee.ui.AddSubTaskView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>